Add resource ID getter
