# swagger.yaml
@@ -48,12 +48,34 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /resources/{id}:
+    get:
+      summary: Resources
+      description: Returns the single resource with the matching ID.
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the resource to get
+          required: true
+          type: integer
+          minimum: 1
+      tags:
+        - Resources
+      responses:
+        200:
+          description: The requested resource
+          schema:
+            $ref: '#/definitions/Resource'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
 definitions:
   Book:
     type: object
     properties:
       book_id:
-        type: number
+        type: integer
         description: Unique identifier for the book.
       title:
         type: string
@@ -63,13 +85,14 @@ definitions:
         description: Book author.
       resources:
         type: array
+        description: IDs for resources linked to this book.
         items:
-          $ref: '#/definitions/Resource'
+          type: integer
   Resource:
     type: object
     properties:
       resource_id:
-        type: number
+        type: integer
         description: The resource's ID
       resource_type:
         type: string
